fixed container name

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   frontend:
-    container_name: ibacws
+    container_name: ibacws-frontend
     build:
       context: .   # current directory (where Dockerfile is)
       dockerfile: Dockerfile
