--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "canvas-confetti": "^1.9.3",
+    "html2canvas": "^1.4.1",
+    "html2canvas-pro": "^1.5.11",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
+    "react-confetti": "^6.4.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2"
   },
